syntax = "proto3";

package services;

message ProdRequest{
  int32 prod_id= 1;//传入的商品id
  ProdAreas prod_area = 2 ; //商品所在区域
}

message ProdResponse{
  int32 prod_stock= 1; //商品库存
}

//库房区域
enum ProdAreas{
  A = 0;
  B = 1;
  C = 2;
}

service ProdService{
  rpc GetProdStock(ProdRequest) returns (ProdResponse){}
}